[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/UI/VSplitBarUnder.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/VSplitBarProgress.png" type="Texture" id=2]
[ext_resource path="res://Scenes&Scripts/UI/AmmoBars.gd" type="Script" id=3]
[ext_resource path="res://Sprites/UI/2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/1.png" type="Texture" id=5]

[node name="AmmoBars" type="Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -26.0
margin_bottom = 36.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Under" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -113.0
margin_top = 54.0
margin_right = -53.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 1 )
tint_under = Color( 0.243137, 0.243137, 0.243137, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="Under"]
margin_left = 1.0
margin_top = 200.0
margin_right = 29.0
margin_bottom = 260.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureRect" parent="Under"]
margin_left = 31.0
margin_top = 200.0
margin_right = 59.0
margin_bottom = 260.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxCont" type="HBoxContainer" parent="Under"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar1" type="TextureProgress" parent="Under/HBoxCont"]
margin_right = 31.0
margin_bottom = 200.0
size_flags_horizontal = 3
max_value = 180.0
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true

[node name="Bar2" type="TextureProgress" parent="Under/HBoxCont"]
margin_left = 28.0
margin_right = 60.0
margin_bottom = 200.0
size_flags_horizontal = 3
max_value = 180.0
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true
